# Test1

./: .gitignore  FinalPlan.md  README.md  RenAIssance_Showcase.ipynb  alignment_qc.ipynb  kraken_eval_files.txt  kraken_eval_results.csv  line_alignment.csv  llm_corrected_results_final.csv  pyproject.toml  sample.ipynb  step10_Post_LLM_correction.py  step1_1_pdf_to_images.py  step1pdf_to_images.py  step2_yolo_pipeline.py  step3_yolo_crop.py  step4_line_segmentation.py  step4_rename_and_realign_txt.py  step5_line_segmentation.py  step5_rename_and_realign_txt.py  step6_augmentation_split.py  step7_tesseract_baseline.py  step8_trocr_finetune.py  step9.0_prepare_kraken_data.py  step9.1_compile_kraken_data(CRNN).py  step9.2_train_kraken_crnn.py  step9_5_evaluate_post_correction.py  step9_llm_post_correction.py  workaround.ipynb
